[package]
name = "simple"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "simple"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies.anchor-lang]
git = "https://github.com/billythedummy/anchor"
branch = "bumps-codegen"
